--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-- pegar as páginas para anotação do banco
-- sincronizar as anotações com algum banco de dados de minha preferência
-- criar o cenário de validaçãodas perguntas da etapa 1
+- criar a página da etapa 2 (validação)
 - adicionar o controle de estágios (anotação ou validação das anotações) para os usuários, com base nas sessões
+- melhorar os alertas exibidos em tela
